2008-01-31  Jan Schmidt  <Jan.Schmidt@sun.com>

	* sys/v4l2/v4l2_calls.c: (gst_v4l2_fill_lists):
	Treat ENOTTY (driver does not implement ioctl) the same as
	EINVAL since it implies there are no available standards.

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_probe_caps_for_format),
	(gst_v4l2src_get_nearest_size):
	Replace gst_v4l2src_get_size_limits with 2 calls to new function
	gst_v4l2src_get_nearest_size, and get it to use VIDIOC_S_FMT to
	probe if the driver does not support VIDIOC_TRY_FMT for whatever
	reason, and if we aren't yet actively capturing.

	* sys/v4l2/v4l2src_calls.h:
	Remove replaced function declaration.

2008-01-31  Jan Schmidt  <Jan.Schmidt@sun.com>

	* configure.ac:
	Bump plugins-base requirement to 0.10.16 for the gst_video_format_*
	API.

2008-01-31  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Fix typo.

2008-01-30  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/alpha/Makefile.am:
	* gst/alpha/gstalpha.c:

	Re-write the 'alpha' plugin to be BaseTransform based, simplifying
	some stuff, and making buffer-alloc and resizing work automatically.
	No longer crashes on odd frame widths and heights, although there
	seems to be a disagreement with ffmpegcolorspace about what size
	an AYUV frame with odd height should be.

2008-01-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Alessandro Decina <alessandro at nnva dot org>

	* ext/libpng/gstpngenc.c: (user_write_data), (gst_pngenc_chain):
	* ext/libpng/gstpngenc.h:
	Preallocate the output buffer so that g_memdup() and
	gst_buffer_merge() aren't needed anymore. This greatly improves
	performances and fixes #512544.

2008-01-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/avi/gstavidemux.c: (gst_avi_demux_process_next_entry),
	(gst_avi_demux_stream_data):
	GStreamer timestamps are PTS values while AVI only knows about DTS
	timestamps. Make sure we only copy the DTS as the buffer timestamp when
	we are dealing with a key frame.

2008-01-29  Stefan Kost  <ensonic@users.sf.net>
